# protoc-gen-csa

./: .gitignore  Cargo.toml  build.rs  rustfmt.toml
src/: main.rs  utility.rs
src/generator/: generator_common.rs  generator_model.rs  generator_partial.rs  mod.rs  property.rs  type_map.rs
src/generator/assets/: CsaCommon.cs
src/proto/google/protobuf/: descriptor.proto
test/input/: options.proto  primatives.proto  test.proto
test/output/: Program.cs  TestApp.csproj  TestApp.sln  appsettings.json
test/output/Models/: PrimativeTest.cs
