[package]
name = "protoc-gen-csa"
version = "0.1.0"
authors = ["Adam Rybak <adamrybak85@gmail.com>"]
edition = "2021"

[dependencies]
convert_case = "0.6.0"
prost = "0.13.3"

[build-dependencies]
prost-build = "0.13.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
